--- a/Web.Statu/Views/Osoba/_osobaLayout.cshtml
+++ b/Web.Statu/Views/Osoba/_osobaLayout.cshtml
@@ -18,7 +18,7 @@
 {
     <ol class="breadcrumb">
         <li><a href="/">Hlídač Státu</a></li>
-        <li>Úřady a firmy</li>
+        <li>Osoby</li>
         @if (Model.viewName.ToLower() != "index")
         {
             <li><a href="/osoba/@Model.osoba.NameId">@Model.osoba.FullNameWithYear()</a></li>
