--- a/Web.Statu/Views/Subjekt/Index.cshtml
+++ b/Web.Statu/Views/Subjekt/Index.cshtml
@@ -536,7 +536,11 @@
                     <text>
                         Nejvíce v
                         <ul>
-                            @Html.Raw(string.Join("", dsSearch.Results.Where(m => m.Total > 0).OrderByDescending(o => o.Total).Take(4).Select(m => $"<li><a href='{m}'>{m.DataSet.Registration().name}</a> ({HlidacStatu.Util.RenderData.NiceNumber(m.Total)})</li>")))
+                            @Html.Raw(string.Join("", dsSearch.Results
+                                .Where(m => m.Total > 0)
+                                .OrderByDescending(o => o.Total)
+                                .Take(4)
+                                .Select(m => $"<li><a href='{m.DataSet.DatasetSearchUrl(m.RenderQuery())}'>{m.DataSet.Registration().name}</a> ({HlidacStatu.Util.RenderData.NiceNumber(m.Total)})</li>")))
 
                         </ul>
                     </text>
