--- a/Web.Statu/Views/Osoba/Index.cshtml
+++ b/Web.Statu/Views/Osoba/Index.cshtml
@@ -384,8 +384,9 @@
                         <ul>
                             @Html.Raw(string
                                         .Join("", dsSearch.Results.Where(m => m.Total > 0)
-                                        .OrderByDescending(o => o.Total).Take(4)
-                                        .Select(m => $"<li><a href='{m.DataSet.DatasetSearchUrl($"( OsobaId:{Model.NameId} )")}'>{m.DataSet.Registration().name}</a> ({HlidacStatu.Util.RenderData.NiceNumber(m.Total)})</li>"))
+                                        .OrderByDescending(o => o.Total)
+                                        .Take(4)
+                                        .Select(m => $"<li><a href='{m.DataSet.DatasetSearchUrl(m.RenderQuery())}'>{m.DataSet.Registration().name}</a> ({HlidacStatu.Util.RenderData.NiceNumber(m.Total)})</li>"))
                                     )
 
                         </ul>
