--- a/Web.Statu/Views/Osoba/Index.cshtml
+++ b/Web.Statu/Views/Osoba/Index.cshtml
@@ -407,3 +407,4 @@
     <!--
         @Html.Raw(string.Join("\n",laps.Laps.Select(m=>$"{m.Name} : {m.ExactElapsedMs:# ##0.00}ms")))
         -->
+</div>
