--- a/Web.Statu/Views/Subjekt/Subjekt_Zahranicni.cshtml
+++ b/Web.Statu/Views/Subjekt/Subjekt_Zahranicni.cshtml
@@ -87,7 +87,7 @@
 {
     <script type="text/javascript">
     SocialShareKit.init({
-        url: 'https://www.hlidacstatu.cz@(Url.Action("Detail", new { id = Model.ICO }))',
+        url: 'https://www.hlidacstatu.cz@(Url.Action("Index", "Subjekt", new { id = Model.ICO }))',
         twitter: {
             via: 'HlidacSmluv'
         }
