just ignore razor error in resharper

--- a/Web.Statu/Views/Home/Report.cshtml
+++ b/Web.Statu/Views/Home/Report.cshtml
@@ -220,6 +220,7 @@ XINTEXT (0->0.7mld),
 
 }
 
+@* ReSharper disable once Razor.SectionNotResolved *@
 @section scripts
 {
     <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
@@ -230,6 +231,7 @@ XINTEXT (0->0.7mld),
     <script src="/scripts/highcharts-6/modules/treemap.js"></script>
 
 }
+@* ReSharper disable once Razor.SectionNotResolved *@
 @section breadcrumb
 {
     <ol class="breadcrumb">
