--- a/Web.Statu/Views/Home/TextSmlouvy.cshtml
+++ b/Web.Statu/Views/Home/TextSmlouvy.cshtml
@@ -62,12 +62,12 @@
     }
 }
 @section scripts {
-    <script src="https://linker.zakonyprolidi.cz/lib/lite.js"></script>
+    @*<script src="https://linker.zakonyprolidi.cz/lib/lite.js"></script>
     <script>
         $(function () {
             zpl_linker.ProcessNode(document.getElementById('processZPL'));
         });
-    </script>
+    </script>*@
 }
 
 
