--- a/Web.Statu/Views/Home/KapacitaNemocnic_child.cshtml
+++ b/Web.Statu/Views/Home/KapacitaNemocnic_child.cshtml
@@ -52,8 +52,8 @@
         -->
     <p>
         <b>
-            Z tohoto důvodu jsme se rozhodli zveřejňovat i stále utajovaná data o aktuálně hospitalizovaných pacientech v jednotlivých krajích a v jednotlivých nemocnicích.
-            Počet aktuálně hospitalizovaných jasně ukazuje prudce rostoucí zátěž nemocnic
+            <b>Od 25. března 2021</b> začal ÚZIS publikovat jinou strukturu dat s vysvětlením, že lépe popisuje skutečných stav vytížení nemocnic. Některá data tak již nejsou dostupná (např. přístroje UPV).
+            Z důvodu pravděpodobně i jiné metodiky na sebe počty a kapacity nemusí přesně navazovat.
         </b>
     </p>
 </div>
@@ -369,8 +369,8 @@
         <h3>@h.regionFull()</h3>
 
 
-    <div class="col-xs-12 col-sm-6 singlebox">
-        <h4>Přístroje ECMO <small>podpora nejvážnějších případů, plicní řízení</small></h4>
+        <div class="col-xs-12 col-sm-6 singlebox">
+            <h4>Přístroje ECMO <small>podpora nejvážnějších případů, plicní řízení</small></h4>
 
             <p>
                 Celkem @h.ECMO_celkem, volných: @h.ECMO_volna (@HlidacStatu.Util.RenderData.NicePercent(h.ECMO_perc()))
@@ -391,24 +391,24 @@
         </div>
         <div class="clearfix hidden-md hidden-lg"></div>
 
-    <div class="col-xs-12 col-sm-6 singlebox">
-        <h4>Přístroje UPV <small>umělá plicní ventilace</small></h4>
-        <p>
-            Celkem @h.UPV_celkem, volných: @h.UPV_volna (@HlidacStatu.Util.RenderData.NicePercent(h.UPV_perc()))
-            <br />
-            Změna volných od @first.lastUpdated.ToString("dd.MM."): <span style="font-weight:normal;color:@TColor(diffH.UPV_volna)">@(diffH.UPV_volna.ToString("+#;-#;0"))</span>
-        </p>
-        <p>
-            @UtilChart.SimpleLineChart(new (string name, IEnumerable<HlidacStatu.Lib.Render.ReportDataTimeValue> values)[] {
-                    (name:"Přístroje UPV celkem", 
-                        values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.UPV_celkem } )
-                    ),
-                    (name:"Přístroje UPV volné", 
-                        values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.UPV_volna } )
-                    )
-                },
-                "","počet",200, minY:0 )
-        </p>
+        <div class="col-xs-12 col-sm-6 singlebox">
+            <h4>Přístroje UPV <small>umělá plicní ventilace</small></h4>
+            <p>
+                Celkem @h.UPV_celkem, volných: @h.UPV_volna (@HlidacStatu.Util.RenderData.NicePercent(h.UPV_perc()))
+                <br />
+                Změna volných od @first.lastUpdated.ToString("dd.MM."): <span style="font-weight:normal;color:@TColor(diffH.UPV_volna)">@(diffH.UPV_volna.ToString("+#;-#;0"))</span>
+            </p>
+            <p>
+                @UtilChart.SimpleLineChart(new (string name, IEnumerable<HlidacStatu.Lib.Render.ReportDataTimeValue> values)[] {
+                        (name:"Přístroje UPV celkem",
+                            values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.UPV_celkem } )
+                        ),
+                        (name:"Přístroje UPV volné",
+                            values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.UPV_volna } )
+                        )
+                    },
+                    "", "počet", 200, minY: 0)
+            </p>
 
         </div>
 
