--- a/Web.Statu/Views/Home/Tmp.cshtml
+++ b/Web.Statu/Views/Home/Tmp.cshtml
@@ -4,7 +4,8 @@
 
 @{
     ViewBag.Title = "";
-
+    int aa = 1 + 2 - 3;
+    int b = 12 / aa;
 }
 
 <h2>Current time: @(DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss.ffff"))</h2>
