--- a/Web.Statu/Views/Subjekt/!vzor.cshtml
+++ b/Web.Statu/Views/Subjekt/!vzor.cshtml
@@ -1,4 +1,4 @@
-﻿@model (HlidacStatu.Lib.Data.Firma Firma, List<int> Data)
+﻿@model HlidacStatu.Lib.Data.Firma Firma
 
 @using Nest;
 @using HlidacStatu.Web.Framework;
