--- a/Web.Statu/Views/Home/Index.cshtml
+++ b/Web.Statu/Views/Home/Index.cshtml
@@ -132,7 +132,7 @@
 
                 <div class="block-col ">
                     <p class="muted">
-                        <a href="/kindex">Index korupčního rizika</a> - zkráceně K–Index, je ukazatel míry rizikových faktorů. Tyto faktory jsou spojovány s rizikem korupce a nehospodárným nakládáním veřejných peněz.
+                        <a href="/kindex">Index klíčových rizik</a> - zkráceně K–Index, je ukazatel míry rizikových faktorů. Tyto faktory jsou spojovány s rizikem korupce a nehospodárným nakládáním veřejných peněz.
                     </p>
                     <p>
                         <a href="/kindex">
