--- a/Web.Statu/Views/Kindex/Detail_child.cshtml
+++ b/Web.Statu/Views/Kindex/Detail_child.cshtml
@@ -231,10 +231,10 @@ else
     </p>
     <p>
         Hlídač státu si klade za cíl zpřístupnit složité a nepřehledné hospodaření veřejné správy široké veřejnosti a proto výsledky této analýzy
-        zveřejňujeme ve formě <b>ratingu - Indexu korupčního rizika</b>.
+        zveřejňujeme ve formě <b>ratingu - Indexu klíčových rizik</b>.
     </p>
     <p>
-        Index korupčního rizika - zkráceně <b>K–Index</b>, je ukazatel, který ukazuje míru rizikových faktorů,
+        Index klíčových rizik - zkráceně <b>K–Index</b>, je ukazatel, který ukazuje míru rizikových faktorů,
         které jsou spojeny s nehospodárným nakládáním s veřejnými penězi a rizikem korupce.
     </p>
     <p>
