--- a/Web.Statu/Views/Kindex/Index.cshtml
+++ b/Web.Statu/Views/Kindex/Index.cshtml
@@ -41,7 +41,7 @@
 
             <div class="block-col ">
                 <p class="muted">
-                    Index korupčního rizika - zkráceně K–Index, je ukazatel míry rizikových faktorů. Tyto faktory jsou spojovány s rizikem korupce a nehospodárným nakládáním veřejných peněz.
+                    Index klíčových rizik - zkráceně K–Index, je ukazatel míry rizikových faktorů. Tyto faktory jsou spojovány s rizikem korupce a nehospodárným nakládáním veřejných peněz.
                 </p>
                 <p>
                     <img src="/content/Img/kindex-info.png" style="width:80%;" title="Popis K-Indexu" />
@@ -121,7 +121,7 @@
 
             <div class="block-col ">
                 <p class="muted">
-                    Náhodně vybraný štítek Indexu korupčního rizika pro dnešní den.
+                    Náhodně vybraný štítek Indexu klíčových rizik pro dnešní den.
                 </p>
                 @{
                     var todaysOrg = HlidacStatu.Lib.Analysis.KorupcniRiziko.Statistics
@@ -136,7 +136,7 @@
             </div>
 
             <div class="block-button-wrapper">
-                <a href="/kindex/detail/@todaysOrg.ico" class="btn btn-default btn-default-new">Jak jsme Index korupčního rizika spočítali</a>
+                <a href="/kindex/detail/@todaysOrg.ico" class="btn btn-default btn-default-new">Jak jsme Index klíčových rizik spočítali</a>
             </div>
         </div>
 
