--- a/Web.Statu/Views/Kindex/Detail_child.cshtml
+++ b/Web.Statu/Views/Kindex/Detail_child.cshtml
@@ -352,30 +352,30 @@ else
     }
 
     .apart {
-        border-color: #002d5a;
-        border-left: #002d5a solid 6px;
+        border-color: #219305;
+        border-left: #219305 solid 6px;
         padding-left: 5px;
     }
 
     .bpart {
-        border-color: #0064b4;
+        border-color: #25bf14;
     }
 
     .cpart {
-        border-color: #00a5ff;
+        border-color: #ffc813;
     }
 
     .dpart {
-        border-color: #9099a3;
+        border-color: #ff9231;
     }
 
     .epart {
-        border-color: #f0aa00;
+        border-color: #e94d01;
     }
 
     .fpart {
-        border-color: #d44820;
-        border-right: #d44820 solid 6px;
+        border-color: #b60c0b;
+        border-right: #b60c0b solid 6px;
         padding-right: 5px;
         max-width: 180px;
         width: 37.2%;
@@ -387,27 +387,27 @@ else
     }
 
     .afill {
-        background-color: #002d5a;
+        background-color: #219305;
     }
 
     .bfill {
-        background-color: #0064b4;
+        background-color: #25bf14;
     }
 
     .cfill {
-        background-color: #00a5ff;
+        background-color: #ffc813;
     }
 
     .dfill {
-        background-color: #9099a3;
+        background-color: #ff9231;
     }
 
     .efill {
-        background-color: #f0aa00;
+        background-color: #e94d01;
     }
 
     .ffill {
-        background-color: #d44820;
+        background-color: #b60c0b;
     }
 </style>
 
